--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body{
     background: papayawhip;
     color: white;
+    font-family: Arial, Helvetica, sans-serif
 }
 ::placeholder{
     text-align: center;
@@ -46,6 +47,8 @@ fieldset{
     border: none;
     border-radius: 2px;
     font-size: 16px;
+    color: olivedrab;
+    text-shadow: 0px 0px 4px white;
 }
 #search:hover{
     border: 4px solid white;
