--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,16 @@ fieldset{
     border-radius: 2px;
     font-size: 16px;
     color: olivedrab;
-    text-shadow: 0px 0px 4px white;
+    text-shadow: 0px 0px 2px papayawhip;
+}
+#cur{
+    background: papayawhip;
+    padding: 8px 30px;
+    border: none;
+    border-radius: 2px;
+    font-size: 16px;
+    color: olivedrab;
+    text-shadow: 0px 0px 2px papayawhip; 
 }
 #search:hover{
     border: 4px solid white;
@@ -61,7 +70,8 @@ fieldset{
     justify-content: space-evenly;
 }
 
-footer{
+.last{
     font-style: italic;
     float: right;
+    margin-bottom: -20px;
 }
