--- a/styles.css
+++ b/styles.css
@@ -67,13 +67,12 @@ fieldset{
     border: 4px solid white;
 }
 .section{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    justify-content: space-evenly;
+        font-size: 16px;
+        opacity: 0.5;
 }
-
+.sectionTwo{
+    font-size: 16px;
+}
 .last{
     font-style: italic;
     float: right;
@@ -114,4 +113,21 @@ strong{
  .active:hover{
     text-decoration: none;
  }
- 
+ .second-temp{
+    font-size: 16px;
+    opacity: 0.5;
+ }
+ .row{
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+ }
+ #img{
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    object-fit: cover;
+ }
