--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body{
     text-align: center;
     font-weight: bold;
     font-size: 16px;
+    color: white;
 }
 fieldset{
     background: olivedrab;
@@ -29,16 +30,30 @@ fieldset{
 .main{
     margin-left: 20px;
 }
+
+input { 
+    outline: none;
+ }
 #input{
     margin-top: 20px;
-    padding: 10px 80px;
+    padding: 10px 40px;
     border: none;
     border-radius: 2px;
     margin-bottom: 10px;
+ 
 }
+input[type="text"]
+{
+    background: transparent;
+    border: none;
+    color: white;
+    font-size: 18px;
+}
+
 #input:hover{
     border: 4px solid papayawhip;
 }
+
 #search-text{
     font-style: italic;
     text-align: center;
@@ -63,12 +78,28 @@ fieldset{
     color: olivedrab;
     text-shadow: 0px 0px 2px papayawhip; 
 }
+#cur:hover{
+    border: 4px solid wheat;
+}
 #search:hover{
-    border: 4px solid white;
+    border: 4px solid wheat;
+}
+#cur:active{
+    background: transparent;
+    color: papayawhip;
+    border: none;
+    text-shadow: 0px 0px 1px black;
+    transition: all ease-in-out 100ms;
+}
+#search:active{
+    background: transparent;
+    color: papayawhip;
+    border: none;
+    text-shadow: 0px 0px 1px black;
+    transition: all ease-in-out 100ms;
 }
 .section{
         font-size: 16px;
-        opacity: 0.5;
 }
 .sectionTwo{
     font-size: 16px;
@@ -123,11 +154,11 @@ strong{
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    box-sizing: border-box;
+    border-radius: 8px;
+    box-shadow: inset 0 0 10px papayawhip;
  }
  #img{
     width: 80%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
     object-fit: cover;
  }
