--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,15 @@
 body{
-    background: papayawhip;
+    background-image: url("MicrosoftTeams-image (6).png");
+    background-size: cover;
+    height: 100vh;
+    overflow: hidden;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     max-width: 600px;
     display: block;
     margin:  50px auto;
+   
+    
 }
 ::placeholder{
     text-align: center;
@@ -13,7 +18,9 @@ body{
     color: white;
 }
 fieldset{
-    background: olivedrab;
+    background-image: url("pexels-rodrigo-souza-2531709.jpg");
+    background-size: cover;
+    background-repeat: repeat;
     border: none;
     display: block;
     margin: 0 auto;
@@ -42,16 +49,25 @@ input {
     margin-bottom: 10px;
  
 }
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    -webkit-transition: "color 9999s ease-out, background-color 9999s ease-out";
+    -webkit-transition-delay: 9999s;
+}
 input[type="text"]
 {
     background: transparent;
     border: none;
     color: white;
     font-size: 18px;
+    text-align: center;
 }
 
 #input:hover{
-    border: 4px solid papayawhip;
+    border: 1px solid white;
+    border-radius: 10px;
 }
 
 #search-text{
@@ -61,28 +77,30 @@ input[type="text"]
     font-size: 30px;
 }
 #search{
-    background: papayawhip;
+    background: transparent;
     padding: 8px 30px;
     border: none;
     border-radius: 2px;
     font-size: 16px;
-    color: olivedrab;
+    color: white;
     text-shadow: 0px 0px 2px papayawhip;
 }
 #cur{
-    background: papayawhip;
+    background: transparent;
     padding: 8px 30px;
     border: none;
     border-radius: 2px;
     font-size: 16px;
-    color: olivedrab;
+    color: white;
     text-shadow: 0px 0px 2px papayawhip; 
 }
 #cur:hover{
-    border: 4px solid wheat;
+    border: 1px solid white;
+    border-radius: 10px;
 }
 #search:hover{
-    border: 4px solid wheat;
+    border: 1px solid white;
+    border-radius: 10px;
 }
 #cur:active{
     background: transparent;
@@ -110,17 +128,17 @@ input[type="text"]
     margin-bottom: -20px;
 }
  #source{
-    color: olivedrab;
-    text-shadow: 0px 0px 4px papayawhip;
+    color: white;
+    text-shadow: 0px 0px 4px black;
     text-decoration: none;
 }
  #source:hover{
     text-decoration: underline;
 }
 #mycode{
-    color: rgb(86, 13, 13);
-    text-shadow: 0px 0px 4px papayawhip;
-    float: right;
+    color: white;
+    text-shadow: 0px 0px 4px black;
+    float: left;
 }
 strong{
     font-size: 50px;
@@ -156,9 +174,15 @@ strong{
     align-items: center;
     box-sizing: border-box;
     border-radius: 8px;
-    box-shadow: inset 0 0 10px papayawhip;
+    box-shadow: inset 0 0 10px white;
  }
  #img{
     width: 80%;
     object-fit: cover;
  }
+.p{
+    font-size: 12px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    text-shadow: 0px 0px 4px black;
+}
