--- a/styles.css
+++ b/styles.css
@@ -186,3 +186,9 @@ strong{
     font-family: Arial, Helvetica, sans-serif;
     text-shadow: 0px 0px 4px black;
 }
+
+@media only screen and (max-width: 600px) {
+    body {
+        overflow: scroll;
+    }
+  }
